# rinha-de-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  check-api-health.sh  docker-compose.yml  executar-teste-local.sh  nginx.conf  run.sh  script.sql  test-api.sh  validate-setup.sh
load-test/: Cargo.toml
load-test/src/: main.rs
load-test/src/tests/: load.rs  mod.rs
load-test/src/utils/: mod.rs
load-test/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
src/: main.rs
