[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
deadpool-postgres = "0.12"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
time = { version = "0.3", features = ["serde", "macros"] }
