[package]
name = "rinha-de-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4"
futures = "0.3"
sqlx = { version = "0.8.6", features = [
	"runtime-tokio-rustls",
	"sqlite",
	"chrono",
	"migrate",
] }
time = { version = "0.3", features = ["serde", "macros"] }

# make a subpackage for our load-test ("load-test" dir, main.rs)
[workspace]
members = ["load-test"]
